set up more js jQuery not working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,12 @@ h1 {
 	font-weight: 600;
 	padding: 10px;
 }
+#timer {
+	display: inline;
+	height: 25px;
+	width: 50px;
+	background-color: none;
+}
 #game {
 	background-image: url("../images/gamebg.jpg");
 	min-height: 300px;
@@ -40,6 +46,7 @@ footer {
 	padding: 10px;
 	border-radius: 25px;
 }
+
 .btn {
 	font-family: 'Mada', sans-serif;
 	display: table;
