--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,8 @@ h1 {
 h2, h3 {
 	font-family: 'Rock Salt', cursive;
 	letter-spacing: 3px;
+	line-height: 1.5;
+
 }
 h2 {
 	color: #002699;
@@ -19,7 +21,9 @@ h2 {
 }
 h3 {
 	color: #00cc00;
-	line-height: 1.5;
+}
+#green{
+	color: #00cc00;
 }
 #dir {
 	color: #002db3;
@@ -46,6 +50,21 @@ footer {
 		font-size: 50px;
 		font-weight: 400;
 	}
+}
+#correct {
+	display: none;
+	font-family: 'Mada', sans-serif;
+	display: table;
+	width: 525px;
+	min-height: 60px;
+	margin: 5px auto;
+	background-color: #ffffcc;
+	color: #002db3;
+	font-size: 24px;
+	line-height: 1.1;
+	white-space: normal;
+	padding: 10px;
+	border-radius: 25px;
 }
 #question {
 	font-family: 'Mukta Vaani', sans-serif;
@@ -102,26 +121,3 @@ footer {
 #ans4 {
 	display: table;
 }
-
-/*#ans1 {
-	display: block;
-	
-}
-#ans2 {
-	display: list-item;
-	width: 100px;
-	height: 50px;
-	background-color: #ffffcc;
-}
-#ans3 {
-	display: list-item;
-	width: 100px;
-	height: 50px;
-	background-color: #ffffcc;
-}
-#ans4 {
-	display: list-item;
-	width: 100px;
-	height: 50px;
-	background-color: #ffffcc;
-}*/
