--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@ h3 {
 	background-color: #ffffcc;
 	font-size: 30px;
 	padding: 5px;
+	margin-bottom: 5px;
 	color: #0000b3;
 	border-radius: 25px;
 	animation-name: timing;
@@ -69,7 +70,7 @@ footer {
 	display: none;
 	font-family: 'Mada', sans-serif;
 	display: table;
-	width: 525px;
+	width: 550px;
 	min-height: 60px;
 	margin: 5px auto;
 	background-color: #ffffcc;
@@ -84,7 +85,7 @@ footer {
 	font-family: 'Mukta Vaani', sans-serif;
 	font-weight: 600;
 	display: table;
-	width: 525px;
+	width: 550px;
 	min-height: 120px;
 	margin: 10px auto;
 	margin-bottom: 20px;
@@ -100,7 +101,7 @@ footer {
 .btn {
 	font-family: 'Mada', sans-serif;
 	display: table;
-	width: 525px;
+	width: 550px;
 	min-height: 60px;
 	margin: 5px auto;
 	background-color: #ffffcc;
@@ -115,7 +116,7 @@ footer {
 #pict{
 	font-family: 'Mada', sans-serif;
 	display: none;
-	width: 525px;
+	width: 550px;
 	min-height: 60px;
 	margin: 5px auto;
 	background-color: #ffffcc;
